# xiaozhi-webrtc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/: __init__.py  chat.html  chatv2.html  config.py  echo_config.py  index.html  index_main.html  index_v1.html  index_v2.html  index_v3.html  indexv2.html  server.py
src/audio/: __init__.py  echo_canceller.py  echo_manager.py  usage_example.py
src/config/: __init__.py  ice_config.py
src/static/: manifest.webmanifest  service-worker.js
src/static/hiyori_pro_zh/: ReadMe.txt
src/static/hiyori_pro_zh/runtime/motion/: hiyori_m01.motion3.json  hiyori_m02.motion3.json  hiyori_m05.motion3.json
src/static/js/: live2d.js
src/track/: audio.py  video.py
