[project]
name = "xiaozhi-webrtc"
version = "0.1.0"
description = "XiaoZhi WebRTC"
authors = [
    {name = "dairoot", email = "623815825@qq.com"}
]

requires-python = ">=3.9"
dependencies = [
    "websockets>=11.0.3",
    "requests>=2.31.0",
    "numpy>=2.0.0",
    "python-socks>=2.7.0",
    "sounddevice>=0.5.0",
    "pillow>=10.0.0",
    "av>=12.0.0",
    "opuslib>=3.0.0",
    "opencv-python>=4.8.0",
    "aiortc>=1.13.0",
    "xiaozhi-sdk>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]
